--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -12,4 +12,9 @@
         android:icon="@drawable/ic_globe_black_24dp"
         android:title="@string/pref_header_location" />
 
+    <header
+        android:fragment="com.myguard.SettingsActivity$AlertPreferenceFragment"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/pref_header_alert" />
+
 </preference-headers>
