dependency location_via_sms

--- a/app/src/main/res/xml/pref_alert.xml
+++ b/app/src/main/res/xml/pref_alert.xml
@@ -72,6 +72,7 @@
 
     <EditTextPreference
         android:defaultValue="location"
+        android:dependency="location_via_sms"
         android:inputType="text"
         android:key="location_keyword"
         android:title="@string/pref_title_location_keyword" />
