--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -12,4 +12,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_alert" />
 
+    <header
+        android:fragment="com.myguard.SettingsActivity$CommandsPreferenceFragment"
+        android:icon="@drawable/ic_commands_black_24dp"
+        android:title="@string/pref_header_commands" />
+
 </preference-headers>
